--- a/week1/opdrachten.html
+++ b/week1/opdrachten.html
@@ -32,7 +32,7 @@
 		 	<h2>Opdrachten week 1</h2>
 		</section>
 		
-		<article class="sample shadow-z-1" id="informatie" data-spy="informatie" data-target="#informatie">
+		<article class="sample shadow-z-1" id="informatie" data-spy="informatie" data-target="#informatie" >
 			<section class="header">
 				<span>Informatie</span>
 			</section>
@@ -58,9 +58,10 @@
 			
 		</article>
 		
-		<article class="sample shadow-z-1" id="opdracht1" data-spy="opdracht1" data-target="#opdracht1">
+		<article class="sample shadow-z-1 easy" id="opdracht1" data-spy="opdracht1" data-target="#opdracht1">
 			<section class="header">
 				<span>Opdracht - Leeftijd calculator in .NET</span>
+				<span class="glyphicon glyphicon-bookmark" aria-hidden="true"></span>
 			</section>
 			
 			<section class="main">
@@ -97,9 +98,10 @@
 		
 		</article>
 		
-		<article class="sample shadow-z-1" id="opdracht2" data-spy="opdracht2" data-target="#opdracht2">
+		<article class="sample shadow-z-1 hard" id="opdracht2" data-spy="opdracht2" data-target="#opdracht2">
 			<section class="header">
 				<span>Opdracht - Telefoonboek in .NET</span>
+				<span class="glyphicon glyphicon-bookmark" aria-hidden="true"></span>
 			</section>
 			
 			<section class="main">
