--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 	
-	<div class="navbar navbar-inverse">
+	<div class="navbar navbar-inverse" ng-controller="authCtrl">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
             <span class="icon-bar"></span>
@@ -47,6 +47,15 @@
               </ul>
             </li>
           </ul>
+		  
+		  <ul class="nav navbar-nav navbar-right" ng-show="user">
+			  <li><a class="navbar-brand" ui-sref="profile">{{user._id}}</a></li>
+			  <li><a class="navbar-brand" ng-click="logout()">Logout</a></li>
+		  </ul>
+		  
+		  <ul class="nav navbar-nav navbar-right" ng-show="!user">
+			<li><a class="navbar-brand" ng-click="login()">Login</a></li>
+		  </ul>
       </div>
 	</div>
 
