--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.16/angular.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
-	<script src="http://localhost:3000/js/pointypony.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	
+	<!-- Das pointy pony -->
+	<!-- Change this line to prod before release -->
+	<script src="http://localhost:3000/js/pointypony.js"></script>
+	
 	<!-- Material design -->
 	<script src="bower_components/bootstrap-material-design/dist/js/material.min.js"></script>
 	<script src="bower_components/bootstrap-material-design/dist/js/ripples.min.js"></script>
