--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	
 	<!-- Das pointy pony -->
 	<!-- Change this line to prod before release -->
-	<script src="http://localhost:3000/js/pointypony.js"></script>
+	<script src="http://advans-dev.herokuapp.com/js/pointypony.js"></script>
 	
 	<!-- Material design -->
 	<script src="bower_components/bootstrap-material-design/dist/js/material.min.js"></script>
