Side Nav toegevoegd

--- a/week1/informatie.html
+++ b/week1/informatie.html
@@ -1,17 +1,16 @@
-<div class="row">
 
-	<div class="col-md-3 " ng-controller="overviewCtrl">
+	<!--<div class="col-md-3 " ng-controller="overviewCtrl">
 		
 		<div class="sideNav">
 				
-			<!-- header -->
+
 			<article class="sample shadow-z-1">
 				<section class="header">
 					<span>Overview</span>
 				</section>
 			</article>
 			
-			<!-- fixed content -->
+
 			<article id="overview" class="shadow-z-1 fixedContent">
 				<img src="img/pointer.png" class="pointer"></img>
 				<section class="main">			
@@ -26,7 +25,7 @@
 			</article>
 		</div>
 
-	</div>
+	</div>-->
 	
 	<div class="col-md-6">
 		
@@ -253,5 +252,9 @@
 	
 
 	</div>
-	<div class="col-md-3"></div>
-</div>
+	
+	<div class="col-md-3">
+		
+		<!-- Eventuele content voor rechter balk -->
+		
+	</div>
