--- a/week1/opdrachten.html
+++ b/week1/opdrachten.html
@@ -1,17 +1,16 @@
-<div class="row">
 
-	<div class="col-md-3 " ng-controller="overviewCtrl">
+	<!--<div class="col-md-3 " ng-controller="overviewCtrl">
 		
 		<div class="sideNav">
 				
-			<!-- header -->
+			
 			<article class="sample shadow-z-1">
 				<section class="header">
 					<span>Overview</span>
 				</section>
 			</article>
 			
-			<!-- fixed content -->
+			
 			<article id="overview" class="shadow-z-1 fixedContent">
 				<img src="img/pointer.png" class="pointer"></img>
 				<section class="main">
@@ -22,7 +21,7 @@
 					</ul>
 				</section>
 			</article>
-		</div>
+		</div>-->
 
 	</div>
 
@@ -205,4 +204,3 @@
 		</div>
 		
 	</div>
-</div>
