--- a/week2/opdrachten.html
+++ b/week2/opdrachten.html
@@ -1,17 +1,14 @@
-<div class="row">
 
-	<div class="col-md-3 " ng-controller="overviewCtrl">
+	<!--<div class="col-md-3 " ng-controller="overviewCtrl">
 		
 		<div class="sideNav">
-				
-			<!-- header -->
+
 			<article class="sample shadow-z-1">
 				<section class="header">
 					<span>Overview</span>
 				</section>
 			</article>
 			
-			<!-- fixed content -->
 			<article id="overview" class="shadow-z-1 fixedContent">
 				<img src="img/pointer.png" class="pointer"></img>
 				<section class="main">
@@ -23,7 +20,7 @@
 			</article>
 		</div>
 
-	</div>
+	</div>-->
 
 	<div class="col-md-6 article-container">
 		
@@ -142,4 +139,3 @@
 		</div>
 		
 	</div>
-</div>
