--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 										<li><a ui-sref="week2" ng-click="scrollTo('linq')">Linq</a></li>
 										<li><a ui-sref="week2" ng-click="scrollTo('test')">Unit Test</a></li>
 										<li><a ui-sref="week2" ng-click="scrollTo('testaaa')">Unit Test - AAA</a></li>
-										<li><a ui-sref="week2" ng-click="scrollTo('code')">Extra: Coding Guidelines</a></li>
+										<li><a ui-sref="week2" ng-click="scrollTo('coding')">Extra: Coding Guidelines</a></li>
 										<li><b><a ui-sref="week2Opdrachten">Opdrachten</a></b></li>
 									</ol>
 								</li>
