--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
 										<li><a ui-sref="week2" ng-click="scrollTo('properties')">Properties</a></li>	
 										<li><a ui-sref="week2" ng-click="scrollTo('lamda')">Lamda</a></li>	
 										<li><a ui-sref="week2" ng-click="scrollTo('linq')">Linq</a></li>
-										<li><a ui-sref="week2" ng-click="scrollTo('test')">Unit Test</a></li>
-										<li><a ui-sref="week2" ng-click="scrollTo('testaaa')">Unit Test - AAA</a></li>
-										<li><a ui-sref="week2" ng-click="scrollTo('coding')">Extra: Coding Guidelines</a></li>
+										<li><a ui-sref="week2" ng-click="scrollTo('coding')">Coding Guidelines</a></li>
+										<li><a ui-sref="week2" ng-click="scrollTo('test')">Extra: Unit Test</a></li>
+										<li><a ui-sref="week2" ng-click="scrollTo('testaaa')">Extra: Unit Test - AAA</a></li>		
 										<li><b><a ui-sref="week2Opdrachten">Opdrachten</a></b></li>
 									</ol>
 								</li>
