nav pas zichtbaar bij kleine resolutie

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
           <a class="navbar-brand" ui-sref="home">Prog5</a>
         </div>
         <div class="navbar-collapse collapse navbar-inverse-collapse">
-          <ul class="nav navbar-nav">
-            <li class="dropdown">
+          <ul class="nav navbar-nav smallnav">
+            <li >
               <a href="index.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">Week 1<b class="caret"></b><div class="ripple-wrapper"></div></a>
               <ul class="dropdown-menu">
                 <li><a ui-sref="week1">Informatie</a></li>
