--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </ul>
 		  
 		  <ul class="nav navbar-nav navbar-right" ng-show="user">
-			  <li><a class="navbar-brand" ui-sref="profile">{{user._id}}</a></li>
+			  <li><a class="navbar-brand" ui-sref="profile">{{user._id}} - <b>{{user.totalPoints}} AP</b></a></li>
 			  <li><a class="navbar-brand" ng-click="logout()">Logout</a></li>
 		  </ul>
 		  
