leaderboards on user.name

--- a/default/home.html
+++ b/default/home.html
@@ -89,7 +89,7 @@
 						
 						<tr ng-repeat="user in users">
 							<td>{{$index + 1}}</td>
-							<td>{{user.email}}</td>
+							<td>{{user.name}}</td>
 							<td>{{user.points}}</td>
 						</tr>
 				
