--- a/default/home.html
+++ b/default/home.html
@@ -92,6 +92,12 @@
 							<td>{{user.name}}</td>
 							<td>{{user.points}}</td>
 						</tr>
+						
+						<tr ng-show="consolation" class="consolation">
+							<td> :( </td>
+							<td>{{consolation.name}}</td>
+							<td>{{consolation.points}}</td>
+						</tr>
 				
 					</tbody>
 				</table>
