--- a/index.html
+++ b/index.html
@@ -101,15 +101,16 @@
             </li>
           </ul>
 		  
-		  <!--<ul class="nav navbar-nav navbar-left" >
+		  <ul class="nav navbar-nav navbar-left" >
 			  <li class="dropdown">
 		  		<a href="index.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">Extra<b class="caret"></b><div class="ripple-wrapper"></div></a>
 				<ul class="dropdown-menu">
-					<li><a ui-sref="pullrequest">Helpl mee!</a></li>
-					<li><a ui-sref="Avanspunten">Avans punten</a></li>
+					<li><a ui-sref="pullrequest">Pull Request</a></li>
+					<li><a ui-sref="punten">Avans punten</a></li>
+					<li><a ui-sref="leaderboards">Leaderboards</a></li>
 				</ul>
 			</li>
-		  </ul>-->
+		  </ul>
 		  
 		  <ul class="nav navbar-nav navbar-right" ng-show="user">
 			  <li class="dropdown">
