--- a/default/pullrequest.html
+++ b/default/pullrequest.html
@@ -42,6 +42,7 @@
 					<table>
 						<tr><td>Tom van Nimwegen</td></tr>
 						<tr><td>Ivo Spijkerman</td></tr>
+						<tr><td>Django vd Heijden</td></tr>
 					</table>
 				</section>
 			</article>
