pull request en start feedback

--- a/default/pullrequest.html
+++ b/default/pullrequest.html
@@ -43,6 +43,7 @@
 						<tr><td>Tom van Nimwegen</td></tr>
 						<tr><td>Ivo Spijkerman</td></tr>
 						<tr><td>Django vd Heijden</td></tr>
+						<tr><td>Kevin Schuurmans</td></tr>
 					</table>
 				</section>
 			</article>
