lambda<trailing whitespace> => Lamba
Capitalized "Lambda" in the menu on the left because it was bothering
me.

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 									<ol>
 										<li><a ui-sref="week2" ng-click="scrollTo('inleiding')">Inleiding</a></li>
 										<li><a ui-sref="week2" ng-click="scrollTo('properties')">Properties</a></li>	
-										<li><a ui-sref="week2" ng-click="scrollTo('lambda')">lambda </a></li>	
+										<li><a ui-sref="week2" ng-click="scrollTo('lambda')">Lambda</a></li>	
 										<li><a ui-sref="week2" ng-click="scrollTo('linq')">Linq</a></li>
 										<li><a ui-sref="week2" ng-click="scrollTo('coding')">Coding Guidelines</a></li>
 										<li><a ui-sref="week2" ng-click="scrollTo('test')">Extra: Unit Test</a></li>
