--- a/default/home.html
+++ b/default/home.html
@@ -28,7 +28,7 @@
 		<div class="row">
 			<div class="col-md-6">
 				
-				<article class="sample shadow-z-1">
+				<article class="sample shadow-z-1 full-height">
 					<section class="header">
 						<span>Help mee!</span>
 					</section>
@@ -49,7 +49,7 @@
 			</div>
 			<div class="col-md-6">
 				
-				<article class="sample shadow-z-1">
+				<article class="sample shadow-z-1 full-height">
 					<section class="header">
 						<span>Avans punten!</span>
 					</section>
