--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
 			<li><a class="navbar-brand" ng-click="login()">Login</a></li>
 		  </ul>
 		  
-		  <ul class="nav navbar-nav navbar-right">
+		  <!--<ul class="nav navbar-nav navbar-right">
 			 <li><img src="default/img/smile.png" data-toggle="modal" data-target="#feedback-dialog"></li>
-		  </ul>
+		  </ul>-->
       </div>
 	</div>
 	
-	<div id="feedback-dialog" class="modal fade" tabindex="-1"  ng-include="'templates/feedback.html'"></div>
+	<!--<div id="feedback-dialog" class="modal fade" tabindex="-1"  ng-include="'templates/feedback.html'"></div>-->
 
 
 
