foutje in de tekst

--- a/week2/informatie.html
+++ b/week2/informatie.html
@@ -345,8 +345,9 @@ using System.Linq;
 </pre>
 	
 				<p>
-					Deze Linq query's maken je leven een stuk makkelijker! Hieronder volgt een lijst van voorbeelden met uitleg. 
-					Deze lijst is niet uitputtend, en ik kan je aanraden om ook even op het wereld wijde web verder te zoeken!
+					Deze Linq query's maken je leven een stuk makkelijker! 
+					Deze voorbeelden zijn maar het topje van de ijsberg wat je allemaal kan met Linq
+				    , en ik kan je aanraden om ook even op het wereld wijde web verder te zoeken!
 				</p>
 				
 				
