--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 	<!-- Das pointy pony -->
 	<!-- Change this line to prod before release -->
 
-	<script src="http://advans.herokuapp.com/js/pointypony.js"></script>
-	<!--<script src="http://localhost:3000/js/pointypony.js"></script>-->
+	<!--<script src="http://advans.herokuapp.com/js/pointypony.js"></script>-->
+	<script src="http://localhost:3000/js/pointypony.js"></script>
 
 	
 	<!-- Material design -->
@@ -125,13 +125,13 @@
 			<li><a class="navbar-brand" ng-click="login()">Login</a></li>
 		  </ul>
 		  
-		  <!--<ul class="nav navbar-nav navbar-right">
+		  <ul class="nav navbar-nav navbar-right">
 			 <li><img src="default/img/smile.png" data-toggle="modal" data-target="#feedback-dialog"></li>
-		  </ul>-->
+		  </ul>
       </div>
 	</div>
 	
-	<!--<div id="feedback-dialog" class="modal fade" tabindex="-1"  ng-include="'templates/feedback.html'"></div>-->
+	<div id="feedback-dialog" class="modal fade" tabindex="-1"  ng-include="'templates/feedback.html'"></div>
 
 
 
