--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 	<!-- Das pointy pony -->
 	<!-- Change this line to prod before release -->
 
-	<!--<script src="http://advans.herokuapp.com/js/pointypony.js"></script>-->
-	<script src="http://localhost:3000/js/pointypony.js"></script>
+	<script src="http://advans-dev.herokuapp.com/js/pointypony.js"></script>
+	<!--<script src="http://localhost:3000/js/pointypony.js"></script>-->
 
 	
 	<!-- Material design -->
