--- a/week3/opdrachten.html
+++ b/week3/opdrachten.html
@@ -53,12 +53,7 @@
 
 					</br>
 				
-
-				<p>
-					Daarnaast bevat elke opdracht, ook een <b>Unit test</b> project en een aantal <b>interface</b> objecten. 
-					Gebruik deze interfaces om je eigen objecten te immplementeren, en run de tests om te controlleren of de opdracht goed is.
-				</p>	
-			
+  				<p>Voor alle opdrachten geldt dat het gebruik van de Toolbox en GUI wizards niet is toegestaan. Alle opdrachten moeten rechtstreeks in XAML gebouwd worden. </p>
 				
 				<p>
 				De workshop opdrachten zijn tevens huiswerk opdrachten. Deze opdrachten zijn oefenmateriaal voor het assessment aan het einde van dit blok. 
@@ -215,6 +210,7 @@
 			<section class="main">
 				<p>
 				Deze workshop opdrachten is er geen start project. Voor de eerste keer moet je een WPF applicatie van de grond af opbouwen!
+				Success!
 				</p>
 			</section>
 			
