--- a/index.html
+++ b/index.html
@@ -223,8 +223,9 @@
 									
 									<ol>
 										<li><a ui-sref="week5" ng-click="scrollTo('inleiding')">Inleiding</a></li>
-										<li><a ui-sref="week5" ng-click="scrollTo('ado')">ADO.NET</a></li>	
-										<li><a ui-sref="week5" ng-click="scrollTo('ef')">Entity Framework</a></li>	
+										<li><a ui-sref="week5" ng-click="scrollTo('domain')">Domain model</a></li>	
+										<li><a ui-sref="week5" ng-click="scrollTo('entity')">Entity Framework</a></li>	
+										<li><a ui-sref="week5" ng-click="scrollTo('nuget')">NuGet</a></li>	
 										<li><a ui-sref="week5" ng-click="scrollTo('codefirst')">Code First</a></li>	
 										<li><a ui-sref="week5" ng-click="scrollTo('dbfirst')">Database First</a></li>
 										<li><a ui-sref="week5" ng-click="scrollTo('tips')">Tips and Tricks</a></li>	
