--- a/week6/informatie.html
+++ b/week6/informatie.html
@@ -28,7 +28,7 @@
 			</section>
 			
 			<section class="main">
-			
+				<img src="img/construction.gif" class="responsive">
 				
 			</section>
 		</article>
